<resources>
    <string name="app_name">Venados Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Venados F.C.</string>
    <string name="nav_header_subtitle">dacodes.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="separation">\t-\t</string>
    <string name="menu_home">Home</string>
    <string name="menu_statistics">Estadísticas</string>
    <string name="menu_players">Jugadores</string>
    <string name="team_name">Venados F.C.</string>
    <string name="posición">Tabla General</string>
    <string name="juegos_jugados">JJ</string>
    <string name="diferencia_goles">DG</string>
    <string name="puntos">PTS</string>
    <string name="ficha_tecnica">FICHA TÉCNICA</string>
    <string name="fecha_de_nacimiento">FECHA DE NACIMIENTO</string>
    <string name="lugar_de_nacimiento">LUGAR DE NACIMIENTO</string>
    <string name="peso">PESO</string>
    <string name="altura">ALTURA</string>
    <string name="equipo_anterior">EQUIPO ANTERIOR</string>
</resources>
