<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="eduarto.castro.venadostest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="eduarto.castro.venadostest.ui.stats.StatsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_players"
        android:name="eduarto.castro.venadostest.ui.players.PlayersFragment"
        android:label="@string/menu_players"
        tools:layout="@layout/fragment_players" />
</navigation>