<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_background"
            android:text="@string/posición"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_background"
            android:text="@string/juegos_jugados" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_background"
            android:text="@string/diferencia_goles" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_background"
            android:text="@string/puntos" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stats_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>